--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "fastapi>=0.120.0",
+    "redis>=7.0.0",
+    "uuid>=1.30",
+    "uvicorn>=0.38.0",
+]
