--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -5,5 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "ping3>=5.1.5",
     "redis>=7.0.0",
 ]
