--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,19 @@
 services:
-  backend:
-    build: ./back
-    ports:
-      - "8000:8000"
-    depends_on:
-      - redis
+    backend:
+        build: ./back
+        ports:
+            - "8000:8000"
+        depends_on:
+            - redis
 
-  agent:
-    build: ./agent
-    depends_on:
-      - redis
+    agent:
+        build: ./agent
+        depends_on:
+            - redis
+        cap_add:
+            - NET_RAW
 
-  redis:
-    image: redis:7
-    ports:
-      - "6379:6379"
+    redis:
+        image: redis:7
+        ports:
+            - "6379:6379"
