--- a/back/pyproject.toml
+++ b/back/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.120.0",
+    "pydantic>=2.12.3",
     "redis>=7.0.0",
     "uuid>=1.30",
     "uvicorn>=0.38.0",
