--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,30 @@
 services:
-    backend:
-        build: ./back
-        ports:
-            - "8000:8000"
-        depends_on:
-            - redis
+  backend:
+    build: ./back
+    ports:
+      - "8000:8000"
+    depends_on:
+      - redis
+    environment:
+      - REDIS_HOST=redis
 
-    agent:
-        build: ./agent
-        depends_on:
-            - redis
-        cap_add:
-            - NET_RAW
+  agent:
+    build: ./agent
+    depends_on:
+      - redis
+    cap_add:
+      - NET_RAW
 
-    redis:
-        image: redis:7
-        ports:
-            - "6379:6379"
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+
+  frontend:
+    build: ./front
+    ports:
+      - "3000:80"
+    depends_on:
+      - backend
+    environment:
+      - VITE_API_URL=http://backend:8000
