add web version

--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -2,13 +2,15 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# Установим uv
 RUN pip install --no-cache-dir uv
 
-COPY pyproject.toml uv.lock ./
-RUN uv sync --frozen --no-dev
-
+# Копируем проект
 COPY . .
 
-ENV PATH="/app/.venv/bin:$PATH"
+# Устанавливаем зависимости через uv
+RUN uv venv && \
+    uv pip install fastapi uvicorn redis pydantic
 
+# Запуск через uv
 CMD ["uv", "run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
