--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,23 @@
 services:
-  backend:
-    build: ./back
-    ports:
-      - "8000:8000"
-    depends_on:
-      - redis
-    environment:
-      - REDIS_HOST=redis
+    front:
+        build: ./front
+        container_name: front
+        ports:
+            - "80:80"
+        restart: unless-stopped
+        depends_on:
+            - back
 
-  agent:
-    build: ./agent
-    depends_on:
-      - redis
-    cap_add:
-      - NET_RAW
+    back:
+        build: ./back
+        env_file: ./back/.env
+        expose:
+            - "8000"
+        depends_on:
+            - redis
+        restart: unless-stopped
 
-  redis:
-    image: redis:7
-    ports:
-      - "6379:6379"
-
-  frontend:
-    build: ./front
-    ports:
-      - "3000:80"
-    depends_on:
-      - backend
-    environment:
-      - VITE_API_URL=http://backend:8000
+    redis:
+        image: redis:7
+        command: ["redis-server", "--save", "60", "1"]
+        restart: unless-stopped
