--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,13 +1,10 @@
-# Этап сборки
-FROM node:20-alpine AS builder
+# === Этап 1: сборка фронта ===
+FROM node:18-alpine AS build
 WORKDIR /app
-COPY package*.json ./
-RUN npm install
 COPY . .
-RUN npm run build
+RUN npm install && npm run build
 
-# Этап сервера (Nginx)
+# === Этап 2: сервер nginx ===
 FROM nginx:alpine
-COPY --from=builder /app/dist /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
