--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,10 +1,17 @@
-# === Этап 1: сборка фронта ===
-FROM node:18-alpine AS build
-WORKDIR /app
-COPY . .
-RUN npm install && npm run build
 
-# === Этап 2: сервер nginx ===
-FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
-COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+# 1) Build stage
+FROM node:20-alpine AS builder
+WORKDIR /app
+COPY package.json package-lock.json* ./
+# Use npm ci if lockfile exists, otherwise fall back to npm install
+RUN if [ -f package-lock.json ]; then npm ci; else npm install; fi
+COPY . .
+RUN npm run build
+
+# 2) Nginx serve
+FROM nginx:1.27-alpine
+COPY --from=builder /app/dist /usr/share/nginx/html
+# Basic SPA config + proxy to backend at http://backend:8000
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
